migrated; gesture table added; dirty;